# loops

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy-site.yml
docs/: intro.html
docs/architecture/: LOOPS_STACK.md  OVERVIEW.md  hlp.md  loop2.md
docs/notes/: 2026-05-21.md  2026-06-01.md  2026-06-03.md  2026-06-19.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-07-02.md
docs/plans/: 2026-06-19-hacp-reference-impl.md  2026-06-19-hlp-reference-impl.md  2026-06-19-loops-protocol-public-website.md  2026-06-19-loops-protocol-stack.md  2026-06-22-frontend-page-optimization.md  2026-06-22-hlp-first-site-positioning.md  2026-06-22-hlp-sdk-e2e-demo.md  2026-06-22-human-loop-protocol-rename.md  2026-06-23-hlp-first-api-refactor.md  2026-06-23-hlp-hardening.md  2026-06-23-hlp-local-cli-e2e.md  2026-06-24-capabilityref-boundary.md  2026-06-24-codex-harness-adapter.md  2026-06-24-hlp-harness-control-plane.md  2026-07-02-hlp-continuous-control-extension.md  rust-migration.md
docs/site/: conformance.md  index.md  overview.md  protocol-map.md  reading-routes.md
docs/site/.vitepress/: config.ts
docs/site/public/: CNAME
docs/specs/: AAP.md  CAP.md  HACP.md  HLP.md  README.md
examples/: __init__.py  hlp_adapter_compat_demo.py  hlp_codex_harness_demo.py  hlp_e2e_demo.py  hlp_harness_wrap_demo.py  hlp_local_cli_e2e.py  loop0.config.json  start_agent.py
examples/prompts/: loop0-system.md
loop0/: __init__.py  agent.py  events.py  logging.py  profiles.py  prompt.py  runtime.py  state.py
loop0/channels/: __init__.py  base.py
loop0/components/: __init__.py  base.py
loop0/providers/: __init__.py  base.py  openai.py
loop0/tools/: __init__.py  base.py  shell.py
loops/: __init__.py  agent.py  logging.py  prompt.py  runtime.py  state.py  types.py
loops/channels/: __init__.py  base.py
loops/components/: __init__.py  base.py
loops/hlp/: __init__.py  adapters.py  audit.py  host.py  objects.py  operations.py  sdk.py  sqlite_store.py  state_machine.py
loops/loop0/: __init__.py  agent.py  cli.py  events.py  io.py  logging.py  policy.py  profiles.py  prompt.py  runtime.py  state.py  types.py
loops/loop2/: __init__.py  _ids.py  adapters.py  contracts.py  events.py  objects.py  operations.py  sdk.py  sqlite_store.py  store.py  types.py
loops/providers/: __init__.py  base.py  openai.py
loops/tools/: __init__.py  base.py  shell.py
src/: lib.rs
src/loop0/: cli.rs  component.rs  config.rs  dotenv.rs  events.rs  io.rs  mod.rs  provider.rs  runtime.rs  shell.rs  state.rs  tool.rs  types.rs
src/loop1/: mod.rs
src/loop2/: mod.rs
tests/: loop0_config.rs  test_hlp_protocol.py  test_hlp_sdk.py  test_loop0_core.py  test_loop2_hacp.py  test_loop2_hlp.py  test_loops_core.py
(+23 files in other folders)
