[project]
name = "loops"
version = "0.1.0"
description = "Human Loop Protocol SDK for wrapping agent harnesses"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1",
    "python-ulid>=3.1.0",
    "typing-extensions>=4.15.0",
]

[project.scripts]
loops-hlp-demo = "examples.hlp_e2e_demo:main"
loops-hlp-adapters-demo = "examples.hlp_adapter_compat_demo:main"
loops-hlp-codex-harness-demo = "examples.hlp_codex_harness_demo:main"
loops-hlp-harness-demo = "examples.hlp_harness_wrap_demo:main"
loops-hlp-local-cli-demo = "examples.hlp_local_cli_e2e:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["loops*", "examples*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
